--- a/backend/package.json
+++ b/backend/package.json
@@ -10,6 +10,7 @@
     "cors": "^2.8.5",
     "express": "^4.18.2",
     "multer": "^1.4.5-lts.1",
+    "puppeteer": "^18.1.0",
     "xml2js": "^0.6.2",
     "xmlbuilder2": "^3.0.2"
   }
