--- a/backend/package.json
+++ b/backend/package.json
@@ -9,6 +9,7 @@
     "body-parser": "^1.20.2",
     "cors": "^2.8.5",
     "express": "^4.18.2",
+    "iconv-lite": "^0.7.0",
     "multer": "^1.4.5-lts.1",
     "puppeteer": "^18.1.0",
     "xml2js": "^0.6.2",
