--- a/backend/package.json
+++ b/backend/package.json
@@ -3,15 +3,19 @@
   "version": "1.0.0",
   "main": "index.js",
   "scripts": {
-    "start": "node index.js"
+    "start": "node index.js",
+    "start:grpc": "node ./grpc/server.js"
   },
   "dependencies": {
+    "@grpc/grpc-js": "^1.10.8",
+    "@grpc/proto-loader": "^0.7.13",
     "body-parser": "^1.20.2",
     "cors": "^2.8.5",
     "express": "^4.18.2",
+    "fast-xml-parser": "^4.5.0",
     "iconv-lite": "^0.7.0",
     "multer": "^1.4.5-lts.1",
-    "puppeteer": "^18.1.0",
+    "puppeteer": "^24.31.0",
     "xml2js": "^0.6.2",
     "xmlbuilder2": "^3.0.2"
   }
