--- a/backend/package.json
+++ b/backend/package.json
@@ -7,8 +7,10 @@
     "start:grpc": "node ./grpc/server.js"
   },
   "dependencies": {
+    "@google/generative-ai": "^0.12.0",
     "@grpc/grpc-js": "^1.10.8",
     "@grpc/proto-loader": "^0.7.13",
+    "dotenv": "^16.4.5",
     "body-parser": "^1.20.2",
     "cors": "^2.8.5",
     "express": "^4.18.2",
