--- a/backend/package.json
+++ b/backend/package.json
@@ -4,7 +4,8 @@
   "main": "index.js",
   "scripts": {
     "start": "node index.js",
-    "start:grpc": "node ./grpc/server.js"
+    "start:grpc": "node ./grpc/server.js",
+    "start:pipes": "node ./pipes/pipeServer.js"
   },
   "dependencies": {
     "@google/generative-ai": "^0.12.0",
