--- a/backend/package.json
+++ b/backend/package.json
@@ -5,15 +5,18 @@
   "scripts": {
     "start": "node index.js",
     "start:grpc": "node ./grpc/server.js",
-    "start:pipes": "node ./pipes/pipeServer.js"
+    "start:pipes": "node ./pipes/pipeServer.js",
+    "rabbitmq:start": "cmd /c rabbitmq-plugins enable rabbitmq_management & rabbitmq-service start",
+    "rabbitmq:status": "cmd /c rabbitmq-service status"
   },
   "dependencies": {
     "@google/generative-ai": "^0.12.0",
     "@grpc/grpc-js": "^1.10.8",
     "@grpc/proto-loader": "^0.7.13",
-    "dotenv": "^16.4.5",
+    "amqplib": "^0.10.9",
     "body-parser": "^1.20.2",
     "cors": "^2.8.5",
+    "dotenv": "^16.4.5",
     "express": "^4.18.2",
     "fast-xml-parser": "^4.5.0",
     "iconv-lite": "^0.7.0",
