--- a/frontend/package.json
+++ b/frontend/package.json
@@ -10,17 +10,18 @@
   },
   "dependencies": {
     "axios": "^1.4.0",
-    "react": "^18.2.0",
-    "react-dom": "^18.2.0",
     "chart.js": "^4.4.0",
-    "react-chartjs-2": "^5.2.0"
+    "react": "^18.2.0",
+    "react-chartjs-2": "^5.2.0",
+    "react-dom": "^18.2.0",
+    "react-icons": "^5.5.0"
   },
   "devDependencies": {
     "@types/react": "^18.2.0",
     "@types/react-dom": "^18.2.0",
     "@vitejs/plugin-react": "^4.2.0",
+    "fast-xml-parser": "^4.0.13",
     "typescript": "^5.0.0",
-    "vite": "^5.0.0",
-    "fast-xml-parser": "^4.0.13"
+    "vite": "^5.0.0"
   }
 }
